Updated share card dimensions site-wide

--- a/source/contentful_templates/blog.html.slim
+++ b/source/contentful_templates/blog.html.slim
@@ -24,7 +24,7 @@ ruby:
       post_featured_image_title = "Datica Blog"
   end
   if p.has_key?("share_image")
-      current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_size_small
+      current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_share
   elsif p.has_key?("featured_image")
       current_page.data.share_image = cf_asset_protocol + p["featured_image"]["url"] + image_size_small
   else
