--- a/source/contentful_templates/academy.html.slim
+++ b/source/contentful_templates/academy.html.slim
@@ -23,9 +23,9 @@ ruby:
       # post_featured_image_title = "Datica Academy"
   end
   if p.has_key?("share_image")
-      current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_size_small
+      current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_share
   elsif p.has_key?("featured_image")
-      current_page.data.share_image = cf_asset_protocol + p["featured_image"]["url"] + image_size_small
+      current_page.data.share_image = cf_asset_protocol + p["featured_image"]["url"] + image_share
   else
       current_page.data.share_image = share_image_fallback
   end
