--- a/source/contentful_templates/guide.html.slim
+++ b/source/contentful_templates/guide.html.slim
@@ -24,9 +24,9 @@ ruby:
         current_page.data.date = today.strftime('%B %-d, %Y')
     end
     if p.has_key?("share_image")
-        current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_size_small
+        current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_share
     elsif p.has_key?("image_thumb")
-        current_page.data.share_image = cf_asset_protocol + p["image_thumb"]["url"] + image_size_small
+        current_page.data.share_image = cf_asset_protocol + p["image_thumb"]["url"] + image_share
     else
         current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/NL2SgI83KesMS86cWO44y/e908972bb9193eec594b639881e25e6f/academy-share-default.jpg" + image_size_small
     end
