--- a/source/contentful_templates/podcast.html.erb
+++ b/source/contentful_templates/podcast.html.erb
@@ -14,7 +14,7 @@ current_page.data.title = p["title"] + " | Healthcare Innovators Podcast"
 current_page.data.summary = safe_summary(p.summary)
 share_image_fallback = "https://images.ctfassets.net/189dvqdsjh46/1L0X4JCpQC1WyzRzAEBiyR/81fe98cefbc85a290b38a67a0bf3fdb7/podcast-4x4-share-card.jpg"
 if p.has_key?("share_image")
-    current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_size_small
+    current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_share
 else
     current_page.data.share_image = share_image_fallback
 end
