--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -34,11 +34,11 @@ ruby:
         current_page.data.date = today.strftime('%B %-d, %Y')
     end
     if p.has_key?("share_image")
-        current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_size_small
+        current_page.data.share_image = cf_asset_protocol + p["share_image"]["url"] + image_share
     elsif p.has_key?("image_thumb")
-        current_page.data.share_image = cf_asset_protocol + p["image_thumb"]["url"] + image_size_small
+        current_page.data.share_image = cf_asset_protocol + p["image_thumb"]["url"] + image_share
     else
-        current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/51Kf8PEelGioY6qsQmAkA4/53f2e5ccb00ec3f9a3e6458faded319b/webinar-share.jpg" + image_size_small
+        current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/51Kf8PEelGioY6qsQmAkA4/53f2e5ccb00ec3f9a3e6458faded319b/webinar-share.jpg" + image_share
     end
     bg_default = "https://images.ctfassets.net/189dvqdsjh46/42ucBFmGx2ek0C8IWU6CiC/2177ddcfa81da18bd83f49c4e1232f84/webinar-bg-default.svg"
     if p.has_key?("image_thumb")
