--- a/source/partials/snippets/_footer.slim
+++ b/source/partials/snippets/_footer.slim
@@ -36,8 +36,8 @@ footer.section-article.container-color--gray-gradient.main-footer role="contenti
           li
             = current_link_to m.title, m.url, title: m.desc, class: ""
       .logo-cloud.nopad
-        img.logo-cloud--item.logo-size--medium.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/016f2d364265c04e12c7db4eae95f94c/hitrust-logo.svg" height="48" width="83" /
-        img.logo-cloud--item.logo-size--medium.lozad data-src="https://images.ctfassets.net/189dvqdsjh46/2VnE1VKgSI0CigIaimYymm/8661955dacafd96c3c565bb5d1503dc8/coalfire-badge.png" /
+        / img.logo-cloud--item.logo-size--medium.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/016f2d364265c04e12c7db4eae95f94c/hitrust-logo.svg" height="48" width="83" /
+        / img.logo-cloud--item.logo-size--medium.lozad data-src="https://images.ctfassets.net/189dvqdsjh46/2VnE1VKgSI0CigIaimYymm/8661955dacafd96c3c565bb5d1503dc8/coalfire-badge.png" /
         img.logo-cloud--item.logo-size--medium.lozad alt=("Cloud native computing foundation") data-src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/7dc0a16f892c1950cb743bb3f54f1ad6/cncf-logo-horizontal-alt.svg" height="48" width="157" /
     .column.shrink
       img.lozad.logo-size--xlarge src=loader_square data-src="https://images.ctfassets.net/189dvqdsjh46/yYSl0Yi3YWOsHOsExZPr6/69291bb4cdb86ed13aa5832480413c00/aws-partner-healthcare-card.png?w=280"
