--- a/source/about/_index-old.html.erb
+++ b/source/about/_index-old.html.erb
@@ -168,13 +168,13 @@ layout: company
                         The <a href="https://completecloudcompliance.com" title="get the book">Complete Cloud Compliance</a> book is published.
                     </div>
                 </div>
-                <div class="block">
+                <!-- <div class="block">
                     <div class="date"><span>October 2018</span></div>
                     <span class="dot"></span>
                     <div class="content">
                         Datica announces the <a href="/monitor" title="CCMS">Cloud Compliance Management System</a> (CCMS), giving customers constant visibility of the precise state of their cloud environments.
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
