Removing some Monitor promos, webinars, CTAs

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -100,7 +100,7 @@ section.masthead.bg-light.container-color--light-grad.relative id="masthead"
 
 section.section-article.bg-dark.container-color--gray-dark-grad.collection#case-studies
   = partial("/partials/content/cta-section-promo", :locals => { :entry => data.site.cta["cdRLk1E4TCvKRTrZ5fEdo"], :classes => "group--2x" })
-  = partial("/partials/content/cta-section-promo", :locals => { :entry => data.site.cta["4eXHm6R7WzdKbyS8hRISbJ"], :classes => "" })
+  /= partial("/partials/content/cta-section-promo", :locals => { :entry => data.site.cta["4eXHm6R7WzdKbyS8hRISbJ"], :classes => "" })
   /.art
     img.z-5.art-accent.img-mix-overlay.lozad data-src=art_dark
 
