--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -13,7 +13,7 @@ ruby:
     current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/51Kf8PEelGioY6qsQmAkA4/53f2e5ccb00ec3f9a3e6458faded319b/webinar-share.jpg" + image_share
     bg_default = "https://images.ctfassets.net/189dvqdsjh46/42ucBFmGx2ek0C8IWU6CiC/2177ddcfa81da18bd83f49c4e1232f84/webinar-bg-default.svg"
 
-.container-gray-10
+.container-gray-11
     section#top
         / .faded-max.group
         = partial "partials/head/header", :locals => { :style => "dark" }
@@ -26,7 +26,8 @@ ruby:
         - sorted_entries.take(1).each do | id, webinar_entry |
             - if webinar_entry.has_key?("event_date")
                 - if today.strftime("%F") >= webinar_entry['event_date'].strftime("%F") ? is_future = false : is_future = true
-            = partial "partials/cards/webinar-poster", :locals => { :entry => webinar_entry, :is_future => is_future, :card_style => "horizontal" }
+            // normally show this but something's weird when I archived some CCMS entries. 
+            /= partial "partials/cards/webinar-poster", :locals => { :entry => webinar_entry, :is_future => is_future, :card_style => "horizontal" }
             / .row.align-center
                 .columns.small-12.large-6
                     
@@ -42,27 +43,27 @@ ruby:
                                         = partial("partials/snippets/person", :locals => { :p => author })
                         .columns.small-6
                             = partial "partials/snippets/button", :locals => { :label => "Register to watch", :url => "/webinars/#{webinar_entry.slug}", :button_classes => "button success", :icon => "icon-chevron-right", :icon_align => "right" }
-section.section-article.container-gray-11
-    .row.align-center.group
-        .columns.small-12.text-center
-            h2.headline-5.spaced-out On-Demand Webinars
-    - sorted_entries[1...20].each do | id, webinar_entry |
-        .row.align-center.group--2x
-            .columns.small-12.medium-8.large-5
-                = partial "partials/cards/webinar-poster", :locals => { :entry => webinar_entry }
 
-            .columns.small-12.medium-4.large-5
-                = Kramdown::Document.new(webinar_entry["summary"]).to_html
-                - if webinar_entry.has_key?("authors")
-                    aside.group
-                        p.text-italic Presented by
-                        - webinar_entry["authors"].each do | author |
-                            p
-                                = partial("partials/snippets/person-small", :locals => { :p => author })
+        .row.align-center.group
+            .columns.small-12.text-center
+                h2.headline-5.spaced-out On-Demand Webinars
+        - sorted_entries[0...20].each do | id, webinar_entry |
+            .row.align-center.group--2x
+                .columns.small-12.medium-8.large-5
+                    = partial "partials/cards/webinar-poster", :locals => { :entry => webinar_entry }
 
-    .row.pad
-        .columns.small-12.text-center
-            = partial "partials/snippets/button", :locals => { :label => "Learn more at the Datica Academy", :url => "/academy/", :button_classes => "button", :icon => "icon-chevron-left", :icon_align => "left", :icon_color => "white" }
+                .columns.small-12.medium-4.large-5
+                    = Kramdown::Document.new(webinar_entry["summary"]).to_html
+                    - if webinar_entry.has_key?("authors")
+                        aside.group
+                            p.text-italic Presented by
+                            - webinar_entry["authors"].each do | author |
+                                p
+                                    = partial("partials/snippets/person-small", :locals => { :p => author })
+
+        .row.pad
+            .columns.small-12.text-center
+                = partial "partials/snippets/button", :locals => { :label => "Learn more at the Datica Academy", :url => "/academy/", :button_classes => "button", :icon => "icon-chevron-left", :icon_align => "left", :icon_color => "white" }
 / spat this out manually, rather than 'recent' partial, because don't want webinars down here.
 ruby:
   sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse!
