--- a/source/press/index.html.erb
+++ b/source/press/index.html.erb
@@ -22,7 +22,7 @@ feed_url: "https://datica.com/press/feed.xml"
 <section class="section-article container-color--gray-light" id="companyStory">
     <div class="row align-center">
         <div class="columns small-12 medium-3 large-3">
-            <%= partial("partials/snippets/person", :locals => { :p => data.site.person["5kC0Y798vm6ag8sCq0O2CQ"], :classes => "block-width-medium", :use_headers => false }) %>
+            <%= partial("partials/snippets/person", :locals => { :p => data.site.person["3RvHTij6uX4fLQEB5bUSBS"], :classes => "block-width-medium", :use_headers => false }) %>
             <hr class="divider"/>
             <!-- <h4 class="blog-date">Connect With Us</h4> -->
             <%= partial "partials/snippets/press-links" %>
