Product Information Updates for Pricing
Replaced CKS with MSP. Updated Integrate product description and removed "Service Subscription".

--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -64,9 +64,8 @@ scss:
             /= inline_svg("cks-logo-dark", class: "icon-size--large product-icon")
           .columns
             h2.headline-4.margin-bottom-small
-              a href="/compliant-kubernetes-service" title="Compliant Kubernetes Service" Compliant Kubernetes Service
-            h4.headline-6.text--gray-4.nomargin Product Subscription
-            p CKS subscription is per production Kubernetes cluster. Currently available on AWS. You pay infrastructure costs, like EC2 and S3, directly to AWS because we install the cluster onto your existing AWS account.
+              a href="/cloud-compliance" title="Cloud Compliance" Datica Cloud Compliance
+            p Datica Cloud Compliance provides a fully managed end-to-end cloud compliance solution, enabling developers to scale and grow their cloud applications, without having to worry about HIPAA compliance or HITRUST certification.
 
 
         .row.group--sm.collapse.product-block
@@ -76,10 +75,7 @@ scss:
           .columns
             h2.headline-4.margin-bottom-small
               a href="/integrate" title="Datica Integrate" Datica Integrate
-            h4.headline-6.text--gray-4.nomargin Product Subscription (Required)
-            p Datica Integrate is currently available on AWS or Azure. We deploy it into Datica's existing cloud account. All infrastructure costs, like RAM and storage, are absorbed by Datica. We then maintain all DevOps, security, compliance, and networking duties related to the integration stack itself and all live integrations it powers.
-            h4.headline-6.text--gray-4.nomargin Service Subscription (Optional)
-            p Leverage Datica's expertise to help instantiate any new integration sites. Hundreds of live sites have been integrated over the last four years via this service.
+            p Datica Integrate, the industry’s first and only any-to-any solution, allows health data to integrate from any source to any destination, in any format, without sacrificing PHI security.
 
       #cta.columns.small-12.medium-large-6.large-5
         .callout.pad--lg.drop.form-embed.pricing-form.group
